# CarDekho-Predict

./: .gitignore  .replit  README.md  app.py  pnpm-lock.yaml  pyproject.toml  replit.md
.streamlit/: config.toml
artifacts/api-server/src/routes/: index.ts  ml.ts
artifacts/car-price-app/: index.html  package.json
artifacts/car-price-app/.replit-artifact/: artifact.toml
artifacts/car-price-app/src/: App.tsx  index.css
artifacts/car-price-app/src/components/: layout.tsx
artifacts/car-price-app/src/hooks/: use-auth.tsx
artifacts/car-price-app/src/lib/: api.ts
artifacts/car-price-app/src/pages/: analysis.tsx  compare.tsx  dashboard.tsx  history.tsx  login.tsx  predict.tsx
attached_assets/: PSDLPROJ_1776878019673.docx
backend/: app.db  app.py  requirements.txt
ui/: __init__.py  theme.py  validation.py
