[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "flask-cors==4.0.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "scikit-learn==1.5.1",
    "streamlit>=1.56.0",
]
